--- a/src/index.css
+++ b/src/index.css
@@ -203,7 +203,6 @@ button:hover {
 
 @media (max-width: 360px) {
   .encabezado {
-    height: 80px;
     padding: 0 0.3rem;
   }
 
@@ -213,6 +212,10 @@ button:hover {
 
   .logo-container {
     height: 60px;
+  }
+
+  .encabezado.shrink .logo-container {
+    height: 54px;
   }
 
   .logo {
@@ -252,19 +255,20 @@ button:hover {
     flex-direction: column;
     align-items: center;
     border-bottom: 1px solid #333;
-    padding: 50px 20px;
+    padding: 40px 20px;
     margin: 0 auto;
 }
 
 .inicio-titulo {
     margin: 20px 0;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     letter-spacing: 1px;
     color: #ccc;
     transition: transform 0.4s ease, filter 0.4s ease;
 }
 
 .inicio-subtitulo {
+    font-size: 1.3rem;
     color: #ccc;
     transition: transform 0.4s ease, filter 0.4s ease;
 }
@@ -333,7 +337,6 @@ button:hover {
     border-radius: 10px;
     padding: 40px;
     width: 300px;
-    min-height: 290px;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -577,6 +580,10 @@ textarea {
         padding: 10px;
     }
 
+    #sobre-nosotros {
+        padding: 40px;
+    }
+
     .productos-titulo {
         font-size: 1.1rem;
     }
@@ -665,6 +672,12 @@ textarea {
 .talla.seleccionada {
     background-color: #e41515;
     border-color: #e41515;
+}
+
+.talla.deshabilitada {
+  opacity: 0.4;
+  cursor: not-allowed;
+  pointer-events: none;
 }
 
 .btn-whatsapp {
