--- a/src/index.css
+++ b/src/index.css
@@ -560,7 +560,7 @@ textarea {
 
 .producto-img {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 10px;
     object-fit: cover;
     transition: transform 0.4s ease, filter 0.4s ease;
